<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.artoolkit.ar.ARPokemonBattle.MainMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mode_select"
        style="?android:textAppearanceLarge" />

    <!-- START Host section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <Button
            android:id="@+id/mainMenuHostButton"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_centerInParent="true"
            android:text="@string/mode_host"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainMenuHostButton"
            android:layout_centerHorizontal="true"
            android:text="@string/mode_host_desc"/>
    </RelativeLayout>
    <!-- END Host section-->

    <!-- START Connect section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <Button
            android:id="@+id/mainMenuConnectButton"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_centerInParent="true"
            android:text="@string/mode_connect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainMenuConnectButton"
            android:layout_centerHorizontal="true"
            android:text="@string/mode_connect_desc"/>
    </RelativeLayout>
    <!-- END Connect section-->

    <!-- START Local section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <Button
            android:id="@+id/mainMenuLocalButton"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_centerInParent="true"
            android:text="@string/mode_local"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainMenuLocalButton"
            android:layout_centerHorizontal="true"
            android:text="@string/mode_local_desc"/>
    </RelativeLayout>
    <!-- END Local section-->
</LinearLayout>
