<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/bluetoothContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bluetoothContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/window_padding"
        android:layout_marginBottom="@dimen/window_padding"
        android:text="@string/select_pokemon"
        style="?android:textAppearanceLarge" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@android:id/text1"
        android:layout_above="@+id/bottomBarContainer" />

    <!-- Bottom section depends on mode, handled in code -->
    <RelativeLayout
        android:id="@+id/bottomBarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_pokemon"
            style="@style/Widget.AppCompat.Button.Colored"

            />

        <TextView
            android:id="@+id/togglebarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/ready_question"
            android:layout_centerVertical="true"
            style="?android:textAppearanceMedium"
            />

        <Switch
            android:id="@+id/toggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

</RelativeLayout>